--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Author: Phillip Brinck Vetter [aut, cre],
 	Uffe H. Thygesen [ctb],
 	Peder Bacher [ctb],
 	Henrik Madsen [ctb]
-Description: The ctsmTMB package is used to estimate parameters in partially observed stochastic state space systems, in addition to being able to generate forecasts. The package employs the R6 object for easy model construction, and uses the TMB/RTMB packages for its modern C++ implementations and algorithmic differentiation. The estimation methods implemented are variations of (non-linear) Kalman Filters in addition to the Laplace approximation.
+Description: ctsmTMB is an R package for parameter and state estimation and forecasting in stochastic state space systems. These are partially observed state space systems that whose latent states evolve according to a system of stochastic differential equation. The package employs the R6 object for easy model construction, and uses the TMB/RTMB packages for its modern C++ implementations and algorithmic differentiation. The estimation methods implemented are variations of (non-linear) Kalman Filters in addition to the Laplace approximation.
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
