structural changes, estimate initial, profile likelihood

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ S3method(plot,ctsmTMB.fit)
 S3method(plot,ctsmTMB.pred)
 S3method(print,ctsmTMB)
 S3method(print,ctsmTMB.fit)
+S3method(profile,ctsmTMB.fit)
 S3method(summary,ctsmTMB)
 S3method(summary,ctsmTMB.fit)
 export(ctsmTMB)
+export(profile0.ctsmTMB.fit)
 importFrom(stats,fft)
 importFrom(stats,frequency)
 importFrom(stats,spec.taper)
