--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,22 @@ S3method(profile,ctsmTMB.fit)
 S3method(summary,ctsmTMB)
 S3method(summary,ctsmTMB.fit)
 export(ctsmTMB)
-export(profile0.ctsmTMB.fit)
+import(R6)
+import(Rcpp)
+import(RcppEigen)
+import(RcppZiggurat)
+importFrom(stats,acf)
+importFrom(stats,as.formula)
+importFrom(stats,cov2cor)
+importFrom(stats,density)
 importFrom(stats,fft)
 importFrom(stats,frequency)
+importFrom(stats,lag)
+importFrom(stats,na.pass)
+importFrom(stats,nlminb)
+importFrom(stats,pacf)
+importFrom(stats,pnorm)
+importFrom(stats,pt)
 importFrom(stats,spec.taper)
+importFrom(utils,head)
 useDynLib(ctsmTMB)
