trying to make sure gsl is linked to on all systems - changing makevars files and importing RcppGSL

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,9 @@ export(ekf_rcpp_likelihood)
 export(execute_ekf_prediction)
 export(execute_ekf_simulation)
 import(R6)
-import(Rcpp)
-import(RcppEigen)
+import(Rcpp, except=LdFlags)
+import(RcppEigen, except=c(fastLmPure, fastLm))
+import(RcppGSL)
 import(RcppZiggurat)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
