--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: ctsmTMB
 Type: Package
 Title: Continuous Time Stochastic Modelling using Template Model Builder
 Version: 1.0
-Date: 2024-07-01
+Date: 2025-01-27
 Authors@R: c(person("Phillip", "Vetter", email="pbrve@dtu.dk", role = c("aut", "cre")),
 		person("Jan", "Møller", email="jkmo@dtu.dk", role="ctb"),
 		person("Uffe", "Thygesen", email="uhth@dtu.dk", role="ctb"),
@@ -15,12 +15,16 @@ Author: Phillip Brinck Vetter [aut, cre],
 	Peder Bacher [ctb],
 	Henrik Madsen [ctb]
 Description: ctsmTMB is an R package for parameter and state estimation and forecasting in stochastic state space systems. These are partially observed state space systems that whose latent states evolve according to a system of stochastic differential equation. The package employs the R6 object for easy model construction, and uses the TMB/RTMB packages for its modern C++ implementations and algorithmic differentiation. The estimation methods implemented are variations of (non-linear) Kalman Filters in addition to the Laplace approximation.
+Copyright: See the file COPYRIGHTS
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+URL: https://github.com/phillipbvetter/ctsmTMB
+BugReports: https://github.com/phillipbvetter/ctsmTMB/issues
+SystemRequirements: GNU GSL
 Depends:
 	R (>= 4.0.0)
 Imports:
@@ -45,6 +49,3 @@ Suggests:
     grDevices,
     knitr,
     rmarkdown
-URL: 
-	https://github.com/phillipbvetter/ctsmTMB
-SystemRequirements: GNU GSL
