--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,ctsmTMB)
 S3method(plot,ctsmTMB.fit)
 S3method(plot,ctsmTMB.pred)
+S3method(plot,ctsmTMB.profile)
 S3method(print,ctsmTMB)
 S3method(print,ctsmTMB.fit)
 S3method(profile,ctsmTMB.fit)
@@ -13,6 +14,9 @@ import(R6)
 import(Rcpp, except=LdFlags)
 import(RcppEigen, except=c(fastLmPure, fastLm))
 import(RcppZiggurat)
+importFrom(Matrix,chol)
+importFrom(Matrix,expm)
+importFrom(deSolve,ode)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
 importFrom(stats,cov2cor)
@@ -26,5 +30,7 @@ importFrom(stats,pacf)
 importFrom(stats,pnorm)
 importFrom(stats,pt)
 importFrom(stats,spec.taper)
+importFrom(stats,var)
 importFrom(utils,head)
+importFrom(utils,tail)
 useDynLib(ctsmTMB)
