--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,5 +52,5 @@ Suggests:
 	grDevices,
 	knitr,
 	rmarkdown
-Remotes: 
-	https://github.com/kaskr/RTMB/tree/master/RTMBode
+Remotes:
+	RTMBode=github::kaskr/RTMB/RTMBode
