--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,10 +6,11 @@ articles:
   estimate: estimate.html
   extended_kalman_filter: extended_kalman_filter.html
   laplace_approx: laplace_approx.html
+  linear_kalman_filter: linear_kalman_filter.html
   observation_equations: observation_equations.html
   predict: predict.html
   simulate: simulate.html
   unscented_kalman_filter: unscented_kalman_filter.html
   using_another_optimizer: using_another_optimizer.html
-last_built: 2025-02-03T11:25Z
+last_built: 2025-04-01T11:51Z
 
