--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,6 @@ VignetteBuilder: knitr
 Config/testthat/edition: 3
 URL: https://github.com/phillipbvetter/ctsmTMB
 BugReports: https://github.com/phillipbvetter/ctsmTMB/issues
-SystemRequirements: GNU GSL
 Depends:
 	R (>= 4.0.0)
 Imports:
@@ -28,9 +27,7 @@ Imports:
 	Deriv,
 	stringr,
 	Rcpp,
-	RcppEigen,
 	RcppXPtrUtils,
-	RcppZiggurat,
 	Matrix,
 	deSolve,
 	ggplot2,
@@ -39,7 +36,7 @@ Imports:
 LinkingTo:
 	Rcpp,
 	RcppEigen,
-	RcppZiggurat,
+	zigg
 Suggests:
 	testthat (>= 3.0.0),
 	knitr,
