--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,6 @@ S3method(summary,ctsmTMB.fit)
 export(ctsm)
 export(ctsmTMB)
 import(R6)
-import(Rcpp, except=LdFlags)
-import(RcppEigen, except=c(fastLmPure, fastLm))
-import(RcppZiggurat)
 importFrom(Matrix,chol)
 importFrom(Matrix,expm)
 importFrom(deSolve,ode)
@@ -32,3 +29,4 @@ importFrom(stats,spec.taper)
 importFrom(stats,var)
 importFrom(utils,head)
 importFrom(utils,tail)
+useDynLib(ctsmTMB)
