implemented filter and smoother, minor spelling changes, temporary bug-fix for input matrix, cran fixes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,13 +26,13 @@ Imports:
 	R6,
 	Deriv,
 	stringr,
-	Rcpp,
 	RcppXPtrUtils,
 	Matrix,
 	deSolve,
 	ggplot2,
 	ggfortify,
-	patchwork
+	patchwork,
+	geomtextpath
 LinkingTo:
 	Rcpp,
 	RcppEigen,
