--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(summary,ctsmTMB.fit)
 export(ctsm)
 export(ctsmTMB)
 import(R6)
+import(ggplot2)
 importFrom(Matrix,chol)
 importFrom(Matrix,expm)
 importFrom(deSolve,ode)
@@ -25,6 +26,7 @@ importFrom(stats,nlminb)
 importFrom(stats,pacf)
 importFrom(stats,pnorm)
 importFrom(stats,pt)
+importFrom(stats,qchisq)
 importFrom(stats,spec.taper)
 importFrom(stats,var)
 importFrom(utils,head)
