--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,6 @@ Depends:
 Imports:
 	TMB,
 	RTMB (>= 1.7),
-	Rcpp,
 	R6,
 	Deriv,
 	stringr,
@@ -41,8 +40,5 @@ LinkingTo:
 Suggests:
 	testthat (>= 3.0.0),
 	knitr,
-	rmarkdown,
-	RTMBode
-Additional_repositories:
-	https://kaskr.r-universe.dev
+	rmarkdown
 LazyData: true
