--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,44 +1,64 @@
-Package: ctsmTMB
 Type: Package
+Package: ctsmTMB
 Title: Continuous Time Stochastic Modelling using Template Model Builder
-Version: 1.0.0
-Date: 2025-03-20
-Authors@R: c(person("Phillip", "Vetter", email="pbrve@dtu.dk", role = c("aut", "cre", "cph")),
-	     	 person("Jan", "Møller", email="jkmo@dtu.dk", role="ctb"),
-	       person("Uffe", "Thygesen", email="uhth@dtu.dk", role="ctb"),
-	       person("Peder", "Bacher", email="pbac@dtu.dk", role="ctb"),
-	       person("Henrik", "Madsen", email="hmad@dtu.dk", role="ctb"))
-Copyright: See the file COPYRIGHTS
-Description: Perform state and parameter inference, and forecasting, in stochastic state-space systems using the 'ctsmTMB' class. This class, built with the 'R6' package, provides a user-friendly interface for defining and handling state-space models. Inference is based on maximum likelihood estimation, with derivatives efficiently computed through automatic differentiation enabled by the 'TMB'/'RTMB' packages (Kristensen et al., 2016) <doi:10.18637/jss.v070.i05>. The available inference methods include Kalman filters, in addition to a Laplace approximation-based smoothing method. For further details of these methods refer to the documentation of the 'CTSMR' package <https://ctsm.info/ctsmr-reference.pdf> and Thygesen (2025) <doi:10.48550/arXiv.2503.21358>. Forecasting capabilities include moment predictions and stochastic path simulations, both implemented in 'C++' using 'Rcpp' (Eddelbuettel et al., 2018) <doi:10.1080/00031305.2017.1375990> for computational efficiency.
+Version: 1.0.1
+Date: 2025-08-27
+Authors@R: c(
+    person("Phillip", "Vetter", , "pbrve@dtu.dk", role = c("aut", "cre", "cph")),
+    person("Jan", "Møller", , "jkmo@dtu.dk", role = "ctb"),
+    person("Uffe", "Thygesen", , "uhth@dtu.dk", role = "ctb"),
+    person("Peder", "Bacher", , "pbac@dtu.dk", role = "ctb"),
+    person("Henrik", "Madsen", , "hmad@dtu.dk", role = "ctb")
+  )
+Description: Perform state and parameter inference, and forecasting, in
+    stochastic state-space systems using the 'ctsmTMB' class. This class,
+    built with the 'R6' package, provides a user-friendly interface for
+    defining and handling state-space models. Inference is based on
+    maximum likelihood estimation, with derivatives efficiently computed
+    through automatic differentiation enabled by the 'TMB'/'RTMB' packages
+    (Kristensen et al., 2016) <doi:10.18637/jss.v070.i05>. The available
+    inference methods include Kalman filters, in addition to a Laplace
+    approximation-based smoothing method. For further details of these
+    methods refer to the documentation of the 'CTSMR' package
+    <https://ctsm.info/ctsmr-reference.pdf> and Thygesen (2025)
+    <doi:10.48550/arXiv.2503.21358>. Forecasting capabilities include
+    moment predictions and stochastic path simulations, both implemented
+    in 'C++' using 'Rcpp' (Eddelbuettel et al., 2018)
+    <doi:10.1080/00031305.2017.1375990> for computational efficiency.
 License: GPL-3
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
-VignetteBuilder: knitr
-Config/testthat/edition: 3
 URL: https://github.com/phillipbvetter/ctsmTMB
 BugReports: https://github.com/phillipbvetter/ctsmTMB/issues
 Depends:
-	R (>= 4.0.0)
+    R (>= 4.0.0)
 Imports:
-	TMB,
-	RTMB (>= 1.7),
-	R6,
-	Deriv,
-	stringr,
-	RcppXPtrUtils,
-	Matrix,
-	deSolve,
-	ggplot2,
-	ggfortify,
-	patchwork,
-	geomtextpath
-LinkingTo:
-	Rcpp,
-	RcppEigen,
-	zigg
+    Deriv,
+    geomtextpath,
+    ggfortify,
+    ggplot2,
+    graphics,
+    grDevices,
+    Matrix,
+    patchwork,
+    R6,
+    RcppXPtrUtils,
+    RTMB (>= 1.7),
+    stats,
+    stringr,
+    TMB,
+    utils
 Suggests:
-	testthat (>= 3.0.0),
-	knitr,
-	rmarkdown
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+LinkingTo:
+    Rcpp,
+    RcppEigen,
+    zigg
+VignetteBuilder: 
+    knitr
+Config/testthat/edition: 3
+Copyright: See the file COPYRIGHTS
+Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
