misc updates, cleanup and trying new hat2pow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(print,ctsmTMB.fit)
 S3method(profile,ctsmTMB.fit)
 S3method(summary,ctsmTMB.fit)
 export(ctsmTMB)
+export(new.model)
 import(R6)
 import(ggplot2)
 importFrom(Matrix,chol)
