--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,23 +11,9 @@ export(ctsmTMB)
 export(new.model)
 import(R6)
 import(ggplot2)
+import(stats)
 importFrom(Matrix,chol)
 importFrom(Matrix,expm)
-importFrom(stats,acf)
-importFrom(stats,as.formula)
-importFrom(stats,cov2cor)
-importFrom(stats,density)
-importFrom(stats,fft)
-importFrom(stats,frequency)
-importFrom(stats,lag)
-importFrom(stats,na.pass)
-importFrom(stats,nlminb)
-importFrom(stats,pacf)
-importFrom(stats,pnorm)
-importFrom(stats,pt)
-importFrom(stats,qchisq)
-importFrom(stats,spec.taper)
-importFrom(stats,var)
 importFrom(utils,head)
 importFrom(utils,tail)
 useDynLib(ctsmTMB)
