--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -11,6 +11,7 @@ permissions: read-all
 
 jobs:
   R-CMD-check:
+    if: contains(github.event.head_commit.message, '-run rcmdcheck')
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
