--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,5 @@
-pandoc: '3.2'
-pkgdown: 2.0.9
+pandoc: 3.6.3
+pkgdown: 2.1.1
 pkgdown_sha: ~
 articles:
   ctsmTMB: ctsmTMB.html
@@ -12,5 +12,7 @@ articles:
   simulate: simulate.html
   unscented_kalman_filter: unscented_kalman_filter.html
   using_another_optimizer: using_another_optimizer.html
-last_built: 2025-04-06T10:12Z
-
+last_built: 2025-09-26T22:27Z
+urls:
+  reference: https://github.com/phillipbvetter/ctsmTMB/reference
+  article: https://github.com/phillipbvetter/ctsmTMB/articles
