--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Type: Package
 Package: ctsmTMB
 Title: Continuous Time Stochastic Modelling using Template Model Builder
-Version: 1.0.1
-Date: 2025-08-27
+Version: 1.1.0
+Date: 2026-02-01
 Authors@R: c(
     person("Phillip", "Vetter", , "pbrve@dtu.dk", role = c("aut", "cre", "cph")),
     person("Jan", "Møller", , "jkmo@dtu.dk", role = "ctb"),
@@ -11,19 +11,19 @@ Authors@R: c(
     person("Henrik", "Madsen", , "hmad@dtu.dk", role = "ctb")
   )
 Description: Perform state and parameter inference, and forecasting, in
-    stochastic state-space systems using the 'ctsmTMB' class. This class,
-    built with the 'R6' package, provides a user-friendly interface for
-    defining and handling state-space models. Inference is based on
-    maximum likelihood estimation, with derivatives efficiently computed
-    through automatic differentiation enabled by the 'TMB'/'RTMB' packages
-    (Kristensen et al., 2016) <doi:10.18637/jss.v070.i05>. The available
-    inference methods include Kalman filters, in addition to a Laplace
+    stochastic state-space systems using the 'ctsmTMB' R6 class. This
+    class provides a user-friendly interface for working with stochastic
+    state space models. Inference is based on maximum likelihood
+    estimation, with derivatives efficiently computed through automatic
+    differentiation enabled by the 'TMB'/'RTMB' packages (Kristensen et
+    al., 2016) <doi:10.18637/jss.v070.i05>. The available inference
+    methods include Kalman filters, in addition to a Laplace
     approximation-based smoothing method. For further details of these
     methods refer to the documentation of the 'CTSMR' package
     <https://ctsm.info/ctsmr-reference.pdf> and Thygesen (2025)
     <doi:10.48550/arXiv.2503.21358>. Forecasting capabilities include
-    moment predictions and stochastic path simulations, both implemented
-    in 'C++' using 'Rcpp' (Eddelbuettel et al., 2018)
+    moment predictions and stochastic path simulations implemented in
+    'C++' using 'Rcpp' (Eddelbuettel et al., 2018)
     <doi:10.1080/00031305.2017.1375990> for computational efficiency.
 License: GPL-3
 URL: https://github.com/phillipbvetter/ctsmTMB
@@ -33,19 +33,25 @@ Depends:
 Imports:
     Deriv,
     ggplot2,
+    graphics,
+    grDevices,
     Matrix,
     patchwork,
     R6,
+    Rcpp,
+    rlang,
     RTMB (>= 1.7),
+    stats,
     stringr,
-    TMB
+    TMB,
+    utils
 Suggests:
     knitr,
     rmarkdown,
-    geomtextpath,
     testthat (>= 3.0.0)
 LinkingTo:
     Rcpp,
+    RcppArmadillo,
     RcppEigen,
     zigg
 VignetteBuilder: 
