--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ S3method(print,ctsmTMB.fit)
 S3method(profile,ctsmTMB.fit)
 S3method(summary,ctsmTMB.fit)
 export(ctsmTMB)
-export(new.model)
+export(newModel)
 import(R6)
 import(ggplot2)
 import(stats)
